feat(websites): force full-page nav for site demos; add Back to Websites to Grilli

--- a/grilli/index.html
+++ b/grilli/index.html
@@ -113,6 +113,10 @@
   <header class="header" data-header>
     <div class="container">
 
+      <div style="margin: 10px 0;">
+        <a href="/websites" style="display:inline-block;padding:10px 14px;border:1px solid #e5e7eb;border-radius:8px;text-decoration:none;color:#111827;background:#ffffffaa;backdrop-filter:saturate(120%) blur(6px);">← Back to Websites</a>
+      </div>
+
       <a href="#" class="logo">
         <img src="./assets/images/image.png" width="250" height="100" alt="Siberia Bear - Home">
       </a>
@@ -1202,6 +1206,8 @@
   <a href="#top" class="back-top-btn active" aria-label="back to top" data-back-top-btn>
     <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
   </a>
+
+  <a href="/websites" style="position:fixed;left:16px;bottom:16px;z-index:1000;display:inline-block;padding:10px 14px;border:1px solid #e5e7eb;border-radius:9999px;text-decoration:none;color:#111827;background:#ffffff;box-shadow:0 6px 20px rgba(0,0,0,.1);">← Back to Websites</a>
 
 
 
