Update website references and content; change image URLs to reflect new domain, enhance personal description, and add new projects to the websites page.

--- a/business-website-template/index.html
+++ b/business-website-template/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <a href="/websites" style="position:fixed; right:16px; bottom:16px; z-index:9999; background:#111827; color:white; padding:8px 12px; border-radius:8px; text-decoration:none; font:600 12px/1.2 system-ui">Back to Websites</a>
+    <a href="/websites" style="position:fixed; left:16px; bottom:16px; z-index:9999; background:#111827; color:#ffffff; padding:10px 14px; border-radius:10px; text-decoration:none; font:600 12px/1.2 system-ui; box-shadow:0 6px 20px rgba(0,0,0,.15);">Back to Websites</a>
   </body>
 </html>
